# stock_analysis

./: pyproject.toml
stock_analysis/: __init__.py  analysis.py
tests/: test_stock_analysis.py
